--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oh my food</title>
+    <title>OhMyFood</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;600&family=Shrikhand&display=swap" rel="stylesheet">
@@ -33,49 +33,102 @@
         </button>
     </div>
     <div class="fonctionnement">
-        <h2 class="fonctionnement-titre">
-            Fonctionnement
-        </h2>
+        <h2 class="fonctionnement-titre">Fonctionnement</h2>
         <div>
             <div class="fonctionnement-etapes">
                 <div class="fonctionnement-etapes-number">
                     1
                 </div>
                 <i class="fa-solid fa-mobile-screen-button" style="color: #7e7e7e;"></i>
-                Choisissez un restaurant
+                <span class="fonctionnement-etapes-texte">Choisissez un restaurant</span>
             </div>
             <div class="fonctionnement-etapes">
                 <div class="fonctionnement-etapes-number">
                     2
                 </div>
                 <i class="fa-solid fa-list-ul" style="color: #7e7e7e;"></i>
-                Composez votre menu
+                <span class="fonctionnement-etapes-texte">Composez votre menu</span>
             </div>
             <div class="fonctionnement-etapes">
                 <div class="fonctionnement-etapes-number">
                     3
                 </div>
-                <i class="fa-solid fa-store" style="color: #9356dc;"></i>
-                Dégustez au restaurant
+                <i class="fa-solid fa-store"></i>
+                <span class="fonctionnement-etapes-texte">Dégustez au restaurant</span>
             </div>
         </div>
     </div>
-        
-    <section>
-        
+    <section class="restaurants">
+        <h2 class="restaurants-titre">Restaurants</h2>
+        <a href="" class="restaurants-card">
+            <article>
+                <div class="restaurants-card-new">
+                    Nouveau
+                </div>
+                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Resto">
+                <div class="restaurants-card-content">
+                    <div class="restaurants-card-content-texte">
+                        <h3 class="restaurants-card-content-texte-title">La palette du goût</h3>
+                        Ménilmontant
+                    </div>
+                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
+                </div>
+            </article>
+        </a>
+        <a href="" class="restaurants-card">
+            <article>
+                <div class="restaurants-card-new">
+                    Nouveau
+                </div>
+                <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Resto">
+                <div class="restaurants-card-content">
+                    <div class="restaurants-card-content-texte">
+                        <h3 class="restaurants-card-content-texte-title">La note enchantée</h3>
+                        Charonne
+                    </div>
+                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
+                </div>
+            </article>
+        </a>
+        <a href="" class="restaurants-card">
+            <article>
+                <div class="restaurants-card-new">
+                    Nouveau
+                </div>
+                <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Resto">
+                <div class="restaurants-card-content">
+                    <div class="restaurants-card-content-texte">
+                        <h3 class="restaurants-card-content-texte-title">A la française</h3>
+                        Cité Rouge
+                    </div>
+                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
+                </div>
+            </article>
+        </a>
+        <a href="" class="restaurants-card">
+            <article>
+                <div class="restaurants-card-new">
+                    Nouveau
+                </div>
+                <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Resto">
+                <div class="restaurants-card-content">
+                    <div class="restaurants-card-content-texte">
+                        <h3 class="restaurants-card-content-texte-title">Le délice des sens</h3>
+                        Folie-Méricourt
+                    </div>
+                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
+                </div>
+            </article>
+        </a>
     </section>
-    <footer>
-        Footer
+    <footer class="footer">
+        <div class="footer-logo">ohmyfood</div>
+        <div class="footer-content">
+            <a href="" class="footer-content-links"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i>Proposer un restaurant</a>
+            <a href="" class="footer-content-links"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i>Devenir partenaire</a>
+            <a href="" class="footer-content-links">Mentions légales</a>
+            <a href="" class="footer-content-links">Contact</a>
+        </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
 </body>
 </html>
