--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
             Réservez le menu qui vous convient
         </h1>
         <span class="intro-texte">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
-        <button class="intro-button button">
-            Explorer nos restaurants
-        </button>
+        <a href="#id-restaurants" class="intro-button">Explorer nos restaurants</a>
     </div>
     <div class="fonctionnement">
         <h2 class="fonctionnement-titre">Fonctionnement</h2>
@@ -58,7 +56,7 @@
             </div>
         </div>
     </div>
-    <section class="restaurants">
+    <section id="id-restaurants" class="restaurants">
         <h2 class="restaurants-titre">Restaurants</h2>
         <a href="" class="restaurants-card">
             <article>
