Ajout animation coeur

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
                         <h3 class="restaurants-card-content-texte-title">La palette du goût</h3>
                         Ménilmontant
                     </div>
-                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
+                    <div>
+                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                        <input type="checkbox" class="anim-trigger">
+                        <i class="fa-solid fa-heart under"></i>
+                    </div>
                 </div>
             </article>
         </a>
@@ -84,8 +88,11 @@
                         <h3 class="restaurants-card-content-texte-title">La note enchantée</h3>
                         Charonne
                     </div>
-                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
-                </div>
+                    <div>
+                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                        <input type="checkbox" class="anim-trigger">
+                        <i class="fa-solid fa-heart under"></i>
+                    </div>                </div>
             </article>
         </a>
         <a href="" class="restaurants-card">
@@ -99,8 +106,11 @@
                         <h3 class="restaurants-card-content-texte-title">A la française</h3>
                         Cité Rouge
                     </div>
-                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
-                </div>
+                    <div>
+                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                        <input type="checkbox" class="anim-trigger">
+                        <i class="fa-solid fa-heart under"></i>
+                    </div>                </div>
             </article>
         </a>
         <a href="" class="restaurants-card">
@@ -114,8 +124,11 @@
                         <h3 class="restaurants-card-content-texte-title">Le délice des sens</h3>
                         Folie-Méricourt
                     </div>
-                    <i class="fa-regular fa-heart" style="color: #000000;"></i>
-                </div>
+                    <div>
+                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                        <input type="checkbox" class="anim-trigger">
+                        <i class="fa-solid fa-heart under"></i>
+                    </div>                </div>
             </article>
         </a>
     </section>
@@ -128,5 +141,12 @@
             <a href="" class="footer-content-links">Contact</a>
         </div>
     </footer>
+
+<!--     <div class="heart">
+        <i class="fa-regular fa-heart fa-2xl over" style="color: #000000;"></i>
+        <input type="checkbox" class="anim-trigger">
+        <i class="fa-solid fa-heart fa-2xl heart-container under"></i>
+    </div> -->
+
 </body>
 </html>
