Animations boutons et loader

--- a/index.html
+++ b/index.html
@@ -16,131 +16,139 @@
 </head>
 
 <body>
-    <header class="header">
-        <img src="assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
-    </header>
-    <div class="localisation">
-        <i class="fa-solid fa-location-dot"></i>
-        <span>Paris, Belleville</span>
-    </div>
-    <div class="intro">
-        <h1 class="intro-titre">
-            Réservez le menu qui vous convient
-        </h1>
-        <span class="intro-texte">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
-        <a href="#id-restaurants" class="intro-button">Explorer nos restaurants</a>
-    </div>
-    <div class="fonctionnement">
-        <h2 class="fonctionnement-titre">Fonctionnement</h2>
-        <div>
-            <div class="fonctionnement-etapes">
-                <div class="fonctionnement-etapes-number">
-                    1
-                </div>
-                <i class="fa-solid fa-mobile-screen-button" style="color: #7e7e7e;"></i>
-                <span class="fonctionnement-etapes-texte">Choisissez un restaurant</span>
-            </div>
-            <div class="fonctionnement-etapes">
-                <div class="fonctionnement-etapes-number">
-                    2
-                </div>
-                <i class="fa-solid fa-list-ul" style="color: #7e7e7e;"></i>
-                <span class="fonctionnement-etapes-texte">Composez votre menu</span>
-            </div>
-            <div class="fonctionnement-etapes">
-                <div class="fonctionnement-etapes-number">
-                    3
-                </div>
-                <i class="fa-solid fa-store"></i>
-                <span class="fonctionnement-etapes-texte">Dégustez au restaurant</span>
-            </div>
+    <div class="div-loader">
+        <div class="div-loader-anim">
+            
         </div>
     </div>
-    <section id="id-restaurants" class="restaurants">
-        <h2 class="restaurants-titre">Restaurants</h2>
-        <a href="" class="restaurants-card">
-            <article>
-                <div class="restaurants-card-new">
-                    Nouveau
-                </div>
-                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Resto">
-                <div class="restaurants-card-content">
-                    <div class="restaurants-card-content-texte">
-                        <h3 class="restaurants-card-content-texte-title">La palette du goût</h3>
-                        Ménilmontant
-                    </div>
-                    <div>
-                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                        <input type="checkbox" class="anim-trigger">
-                        <i class="fa-solid fa-heart under"></i>
-                    </div>
-                </div>
-            </article>
-        </a>
-        <a href="" class="restaurants-card">
-            <article>
-                <div class="restaurants-card-new">
-                    Nouveau
-                </div>
-                <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Resto">
-                <div class="restaurants-card-content">
-                    <div class="restaurants-card-content-texte">
-                        <h3 class="restaurants-card-content-texte-title">La note enchantée</h3>
-                        Charonne
-                    </div>
-                    <div>
-                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                        <input type="checkbox" class="anim-trigger">
-                        <i class="fa-solid fa-heart under"></i>
-                    </div>                </div>
-            </article>
-        </a>
-        <a href="" class="restaurants-card">
-            <article>
-                <div class="restaurants-card-new">
-                    Nouveau
-                </div>
-                <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Resto">
-                <div class="restaurants-card-content">
-                    <div class="restaurants-card-content-texte">
-                        <h3 class="restaurants-card-content-texte-title">A la française</h3>
-                        Cité Rouge
-                    </div>
-                    <div>
-                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                        <input type="checkbox" class="anim-trigger">
-                        <i class="fa-solid fa-heart under"></i>
-                    </div>                </div>
-            </article>
-        </a>
-        <a href="" class="restaurants-card">
-            <article>
-                <div class="restaurants-card-new">
-                    Nouveau
-                </div>
-                <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Resto">
-                <div class="restaurants-card-content">
-                    <div class="restaurants-card-content-texte">
-                        <h3 class="restaurants-card-content-texte-title">Le délice des sens</h3>
-                        Folie-Méricourt
-                    </div>
-                    <div>
-                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                        <input type="checkbox" class="anim-trigger">
-                        <i class="fa-solid fa-heart under"></i>
-                    </div>                </div>
-            </article>
-        </a>
-    </section>
-    <footer class="footer">
-        <div class="footer-logo">ohmyfood</div>
-        <div class="footer-content">
-            <a href="" class="footer-content-links"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i>Proposer un restaurant</a>
-            <a href="" class="footer-content-links"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i>Devenir partenaire</a>
-            <a href="" class="footer-content-links">Mentions légales</a>
-            <a href="" class="footer-content-links">Contact</a>
+
+    <div class="page">
+        <header class="header">
+            <img src="assets/images/logo/ohmyfood.png" alt="Logo de ohmyfood">
+        </header>
+        <div class="localisation">
+            <i class="fa-solid fa-location-dot"></i>
+            <span>Paris, Belleville</span>
         </div>
-    </footer>
+        <div class="intro">
+            <h1 class="intro-titre">
+                Réservez le menu qui vous convient
+            </h1>
+            <span class="intro-texte">Découvrez des restaurants d'exception, sélectionnés par nos soins.</span>
+            <a href="#id-restaurants" class="intro-button">Explorer nos restaurants</a>
+        </div>
+        <div class="fonctionnement">
+            <h2 class="fonctionnement-titre">Fonctionnement</h2>
+            <div>
+                <div class="fonctionnement-etapes">
+                    <div class="fonctionnement-etapes-number">
+                        1
+                    </div>
+                    <i class="fa-solid fa-mobile-screen-button" style="color: #7e7e7e;"></i>
+                    <span class="fonctionnement-etapes-texte">Choisissez un restaurant</span>
+                </div>
+                <div class="fonctionnement-etapes">
+                    <div class="fonctionnement-etapes-number">
+                        2
+                    </div>
+                    <i class="fa-solid fa-list-ul" style="color: #7e7e7e;"></i>
+                    <span class="fonctionnement-etapes-texte">Composez votre menu</span>
+                </div>
+                <div class="fonctionnement-etapes">
+                    <div class="fonctionnement-etapes-number">
+                        3
+                    </div>
+                    <i class="fa-solid fa-store"></i>
+                    <span class="fonctionnement-etapes-texte">Dégustez au restaurant</span>
+                </div>
+            </div>
+        </div>
+        <section id="id-restaurants" class="restaurants">
+            <h2 class="restaurants-titre">Restaurants</h2>
+            <a href="" class="restaurants-card">
+                <article>
+                    <div class="restaurants-card-new">
+                        Nouveau
+                    </div>
+                    <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Resto">
+                    <div class="restaurants-card-content">
+                        <div class="restaurants-card-content-texte">
+                            <h3 class="restaurants-card-content-texte-title">La palette du goût</h3>
+                            Ménilmontant
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                            <input type="checkbox" class="anim-trigger">
+                            <i class="fa-solid fa-heart under"></i>
+                        </div>
+                    </div>
+                </article>
+            </a>
+            <a href="" class="restaurants-card">
+                <article>
+                    <div class="restaurants-card-new">
+                        Nouveau
+                    </div>
+                    <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Resto">
+                    <div class="restaurants-card-content">
+                        <div class="restaurants-card-content-texte">
+                            <h3 class="restaurants-card-content-texte-title">La note enchantée</h3>
+                            Charonne
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                            <input type="checkbox" class="anim-trigger">
+                            <i class="fa-solid fa-heart under"></i>
+                        </div>                </div>
+                </article>
+            </a>
+            <a href="" class="restaurants-card">
+                <article>
+                    <div class="restaurants-card-new">
+                        Nouveau
+                    </div>
+                    <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Resto">
+                    <div class="restaurants-card-content">
+                        <div class="restaurants-card-content-texte">
+                            <h3 class="restaurants-card-content-texte-title">A la française</h3>
+                            Cité Rouge
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                            <input type="checkbox" class="anim-trigger">
+                            <i class="fa-solid fa-heart under"></i>
+                        </div>                </div>
+                </article>
+            </a>
+            <a href="" class="restaurants-card">
+                <article>
+                    <div class="restaurants-card-new">
+                        Nouveau
+                    </div>
+                    <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Resto">
+                    <div class="restaurants-card-content">
+                        <div class="restaurants-card-content-texte">
+                            <h3 class="restaurants-card-content-texte-title">Le délice des sens</h3>
+                            Folie-Méricourt
+                        </div>
+                        <div>
+                            <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                            <input type="checkbox" class="anim-trigger">
+                            <i class="fa-solid fa-heart under"></i>
+                        </div>                </div>
+                </article>
+            </a>
+        </section>
+        <footer class="footer">
+            <div class="footer-logo">ohmyfood</div>
+            <div class="footer-content">
+                <a href="" class="footer-content-links"><i class="fa-solid fa-utensils" style="color: #ffffff;"></i>Proposer un restaurant</a>
+                <a href="" class="footer-content-links"><i class="fa-solid fa-handshake-angle" style="color: #ffffff;"></i>Devenir partenaire</a>
+                <a href="" class="footer-content-links">Mentions légales</a>
+                <a href="" class="footer-content-links">Contact</a>
+            </div>
+        </footer>
+    </div>
 
 <!--     <div class="heart">
         <i class="fa-regular fa-heart fa-2xl over" style="color: #000000;"></i>
