--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <section id="id-restaurants" class="restaurants">
                 <h2 class="restaurants-titre">Restaurants</h2>
                 <div class="container-card">
-                    <a href="" class="restaurants-card">
-                        <article>
+                    <a href="">
+                        <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
                             </div>
@@ -82,8 +82,8 @@
                             </div>
                         </article>
                     </a>
-                    <a href="" class="restaurants-card">
-                        <article>
+                    <a href="">
+                        <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
                             </div>
@@ -100,8 +100,8 @@
                                 </div>                </div>
                         </article>
                     </a>
-                    <a href="" class="restaurants-card">
-                        <article>
+                    <a href="">
+                        <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
                             </div>
@@ -118,8 +118,8 @@
                                 </div>                </div>
                         </article>
                     </a>
-                    <a href="" class="restaurants-card">
-                        <article>
+                    <a href="">
+                        <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
                             </div>
