--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <section id="id-restaurants" class="restaurants">
                 <h2 class="restaurants-titre">Restaurants</h2>
                 <div class="container-card">
-                    <a href="">
+                    <a href="restaurants/La-palette-du-gout.html">
                         <article class="restaurants-card">
                             <div class="restaurants-card-new">
                                 Nouveau
