Correction probleme compatibilité Firefox

--- a/index.html
+++ b/index.html
@@ -74,11 +74,13 @@
                                     <h3 class="restaurants-card-content-texte-title">La palette du goût</h3>
                                     Ménilmontant
                                 </div>
-                                <div>
-                                    <i class="fa-regular fa-heart over" style="color: #000000;"></i>
-                                    <input type="checkbox" class="anim-trigger">
-                                    <i class="fa-solid fa-heart under"></i>
-                                </div>
+                                <label>
+                                    <div>
+                                        <i class="fa-regular fa-heart over" style="color: #000000;"></i>
+                                        <input type="checkbox" class="anim-trigger">
+                                        <i class="fa-solid fa-heart under"></i>
+                                    </div>
+                                </label>
                             </div>
                         </article>
                     </a>
